# zhihu_ai_lesson

./: .env  decision_tree_text.txt  dt_feature_importance.csv  main.py  pyproject.toml
1-AI大模型原理与API使用/: 课前注册API KEY.txt
1-AI大模型原理与API使用/CASE-API使用/: 1-情感分析-Qwen.ipynb  2-天气Function-Qwen.ipynb  3-表格提取-Qwen.ipynb  4-运维事件处置-Qwen.ipynb  5-情感分析-Deepseek-阿里代理.ipynb
1-AI大模型原理与API使用/CASE-保险反欺诈/: read_csv.py  test.csv  train.csv
2-DeepSeek使用与Prompt工程/: 1-情感分析-Deepseek-阿里代理.ipynb  2-提示词工程使用.ipynb  3-deepseek-r1-7b使用.py  requirements.txt
2-DeepSeek使用与Prompt工程/ball/: index.html
3-Cursor编程-从入门到精通/【完成参考】Excel_merge/: excel_merge_new.py  test1.py  员工信息与绩效合并表.xlsx
3-Cursor编程-从入门到精通/【完成参考】bed_usage/: README.md  requirements.txt  view_excel_data.py
3-Cursor编程-从入门到精通/【完成参考】bed_usage/data_cache/: metadata.json
3-Cursor编程-从入门到精通/【完成参考】dashboard_epidemic/my/: app.py  eda_analysis.py  read_excel.py  (+2 more)
4-Cursor数据可视化与洞察/CASE-客户续保预测/: decision_tree_analysis.py  logistic_regression_analysis.py  lr_coefficients.csv  policy_data_fields_explanation.md  predict_with_saved_model.py  prediction_results.xlsx  read_policy_data.py
4-Cursor数据可视化与洞察/【完成参考】CASE-客户续保预测/: README.md  analyze_data.py  best_decision_tree_text.txt  decision_tree_model.py  decision_tree_text.txt  logistic_regression_model.py  naive_bayes_model.py  random_forest_model.py  requirements.txt  view_data.py  view_excel.py
5-Embeddings和向量数据库/: 笔记20250530.txt
5-Embeddings和向量数据库/hotel_recommendation/: hotel_rec - nltk.py  hotel_rec.py  requirements.txt
5-Embeddings和向量数据库/word2vec/: requirements.txt  word_similarity.py
(+6 files in other folders)
