[project]
name = "ai-lesson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dashscope>=1.23.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "modelscope>=1.26.0",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
